--- a/index.html
+++ b/index.html
@@ -239,25 +239,25 @@
       
       <div class=" work-stuff-row">
         <div class=" work-stuff-col filterDiv logo">
-          <img src="images/hero_1.jpg" height="300" alt="Snow" style="width:100%">
+          <img src="images/hero_1.jpg"  alt="Snow" style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv logo">
-          <img src="images/img_9.jpg" height="300" alt="Forest" style="width:100%">
+          <img src="images/img_11.jpg" alt="Forest" style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv logo">
-          <img src="images/hero_1.jpg" alt="Mountains" height="300" style="width:100%" >
+          <img src="images/hero_1.jpg" alt="Mountains"  style="width:100%" >
         </div>
       </div>
    
       <div class=" work-stuff-row">
         <div class=" work-stuff-col filterDiv cover">
-          <img src="images/hero_1.jpg" alt="Snow" height="300" style="width:100%">
+          <img src="images/hero_1.jpg" alt="Snow"  style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv cover">
-          <img src="images/img_6.jpg" alt="Forest" height="300"  style="width:100%">
+          <img src="images/img_1.jpg" alt="Forest"   style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv cover">
-          <img src="images/img_11.jpg" alt="Mountains" height="300"  style="width:100%" >
+          <img src="images/img_11.jpg" alt="Mountains"   style="width:100%" >
         </div>
       </div> 
 </section>
