--- a/index.html
+++ b/index.html
@@ -162,34 +162,34 @@
 
   <div class="row">
     <div class="card card-1 ">
-      <div class="service-card-content-1">
+      <div class="service-card-content-1 card2a">
   
       </div>
-      <div class="service-card-content-2">
+      <div class="service-card-content-2 card2b ">
        <a href="#detailed-service-section" > Content Writing</a>
       </div>
     </div>
       <div class="card card-1">
-        <div class="service-card-content-3">
+        <div class="service-card-content-3 card2c">
   
         </div>
-        <div class="service-card-content-4">
+        <div class="service-card-content-4 card2d">
          <a href="#detailed-service-section"> Digital Marketing</a>
         </div>
       </div>
         <div class="card card-1">
-          <div class="service-card-content-5">
+          <div class="service-card-content-5  card2e">
   
           </div>
-          <div class="service-card-content-6">
+          <div class="service-card-content-6 card2f">
             <a href="#detailed-service-section">Cloud Application</a>
           </div>
         </div>
           <div class="card card-1">
-            <div class="service-card-content-7">
+            <div class="service-card-content-7 card2g">
   
             </div>
-            <div class="service-card-content-8">
+            <div class="service-card-content-8 card2h">
               <a href="#detailed-service-section">Video Animation</a>
             </div>
           </div>
@@ -227,10 +227,10 @@
 
       <div class=" work-stuff-row">
         <div class=" work-stuff-col filterDiv website">
-          <img src="images/hero_1.jpg" alt="Snow" style="width:100%">
+          <img src="images/hero_1.jpg" alt="Snow" target="_blank" style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv website">
-          <img src="images/img_1.jpg" alt="Forest" style="width:100%">
+          <img src="images/img_1.jpg" alt="Forest"  style="width:100%">
         </div>
         <div class=" work-stuff-col filterDiv website">
           <img src="images/hero_1.jpg" alt="Mountains" style="width:100%" >
