--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Intense Designer</title>
     <style>
       .navbar{
   position: -webkit-sticky;
@@ -73,12 +73,7 @@
                         <a class="nav-link" href="#contact-section">Contact</a>
                       </li>
 
-                      <!-- <li class="nav-item">
-                       <a class="nav-link"> <i class="fa fa-search" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link"> <i class="fa fa-desktop" aria-hidden="true"></i></a>
-                      </li> -->
+                     
                   </ul>
               </span>
             </div>
@@ -409,20 +404,7 @@
         </div>
     
   </div>
-  
-  
-  
   </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
   </div><!--End of container-->
   </section>
