Change logo picture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!------------------------ End of top navbar---------->
         <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light" id="headnev">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.svg" alt="">
+                <img src="images/Intense Designer-002.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -86,8 +86,8 @@
         <p class="" data-aos="fade-down"   data-aos-easing="linear" data-aos-duration="1500">Create exactly what you need</p>
     </div>
     <div class="col3">
-        <div class="btn1 " data-aos="fade-right"  data-aos-duration="1500" ><button>Contact Us</button></div>
-        <div class="btn2 "  data-aos="fade-left"  data-aos-duration="1500"><button>Visit Our Services</button></div>
+        <div class="btn1 " data-aos="fade-right"  data-aos-duration="1500" data-aos="fade-up" data-aos-anchor-placement="top-bottom" ><button>Contact Us</button></div>
+        <div class="btn2 "  data-aos="fade-left"  data-aos-duration="1500" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><button>Visit Our Services</button></div>
     </div>
 
 </div>
