update some colors

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <p class="" data-aos="fade-down"   data-aos-easing="linear" data-aos-duration="1500">Create exactly what you need</p>
     </div>
     <div class="col3">
-        <div class="btn1 " data-aos="fade-right"  data-aos-duration="1500" data-aos="fade-up" data-aos-anchor-placement="top-bottom" ><button>Contact Us</button></div>
-        <div class="btn2 "  data-aos="fade-left"  data-aos-duration="1500" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><button>Visit Our Services</button></div>
+        <div class="btn1 " data-aos="fade-right"  data-aos-duration="1500"  ><button>Contact Us</button></div>
+        <div class="btn2 "  data-aos="fade-left"  data-aos-duration="1500"><button>Visit Our Services</button></div>
     </div>
 
 </div>
@@ -222,7 +222,8 @@
       </div> 
 </section>
 <br><br><br>
-
+<!------------------------End of Work Section--------------------->
+<!------------------------ClientS Review Section------------------->
 <section>
 <div class="client-section">
 <div class="client-review-heading text-center ">  <h3 style="color: white;">What Clients are Saying</h3></div>
@@ -634,8 +635,8 @@
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <h6>About</h6>
-              <p class="text-justify">TechDesigner <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code.
-                TechDesigner focuses on providing the most efficient code or
+              <p class="text-justify">Intense Designer <i> WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code.
+                Intense Designer focuses on providing the most efficient code or
                  snippets as the code wants to be simple.
                   We will help programmers build up concepts in
                    different programming languages that include 
